--- a/templates/groupsystem/singlecomment.html
+++ b/templates/groupsystem/singlecomment.html
@@ -1,13 +1,19 @@
 {% load i18n staticfiles guardian_tags %}
 {% get_obj_perms request.user for group as "group_perms" %}
 {% if comment.approved %}
-    <div data-c-id="{{ comment.id }}" class="postcomment">
-        <a href="{% url 'publicusers:user' comment.commentor.id %}">{{ comment.commentor.username }}</a> {% trans "commented" %}
-        <p>{{ comment.comment }}<span> - {% trans "On" %} {{ comment.commented_on|date:"M j Y" }}</span></p>
-        <div class="timeline-comment-options">
-            {% if 'can_delete_comment' in group_perms or request.user == comment.commentor %}
-                <i class="fa fa-trash-o deletecomment" data-comment={{ comment.id }}></i>
-            {% endif %}
-        </div>
+<div data-c-id="{{ comment.id }}" class="postcomment">
+    <a href="{% url 'publicusers:user' comment.commentor.id %}">{{ comment.commentor.username }}</a> {% trans "commented" %}
+    <p>{{ comment.comment }}<span> - {% trans "On" %} {{ comment.commented_on|date:"M j Y" }}</span></p>
+    <div class="edit-comment">
+        <input type="text" name="editcomment" data-comment={{ comment.id }} class="form-control input-sm editcommentinput" value="{{ comment.comment }}">
     </div>
+    <div class="timeline-comment-options">
+        {% if 'can_delete_comment' in group_perms or request.user == comment.commentor %}
+            <i class="fa fa-trash-o deletecomment" data-comment={{ comment.id }}></i>
+        {% endif %}
+        {% if 'can_update_comment' in group_perms or request.user == comment.commentor %}
+            <i class="fa fa-edit editcomment" data-comment={{ comment.id }}></i>
+        {% endif %}
+    </div>
+</div>
 {% endif %}
