--- a/templates/groupsystem/singlecomment.html
+++ b/templates/groupsystem/singlecomment.html
@@ -2,6 +2,21 @@
 {% get_obj_perms request.user for group as "group_perms" %}
 {% if comment.approved %}
 <div data-c-id="{{ comment.id }}" class="postcomment">
+    {% if comment.commentor.profile.avatar_public %}
+        {% if comment.commentor.profile.avatar %}
+            <a href="{% url 'publicusers:user' comment.commentor.id %}">
+                <img src="{{ comment.commentor.profile.avatar.thumbnail.30x30 }}" class="img-circle img-sm" alt="User Image">
+            </a>
+        {% else %}
+            <a href="{% url 'publicusers:user' comment.commentor.id %}">
+                <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle img-sm" width="30" height="30">
+            </a>
+        {% endif %}
+    {% else %}
+        <a href="{% url 'publicusers:user' comment.commentor.id %}">
+            <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle img-sm" width="30" height="30">
+        </a>
+    {% endif %}
     <a href="{% url 'publicusers:user' comment.commentor.id %}">{{ comment.commentor.username }}</a> {% trans "commented" %}
     <p>{{ comment.comment }}<span> - {% trans "On" %} {{ comment.commented_on|date:"M j Y" }}</span></p>
     <div class="edit-comment">
