--- a/templates/crowdfunding/index.html
+++ b/templates/crowdfunding/index.html
@@ -29,7 +29,7 @@
         <div class="header-wrapper">
             {{ crowdfund.header_html|safe }}
             <div class="header-overlay">
-                {% if crowdfund.active and not end_date_passed %}
+                {% if crowdfund.active and not crowdfund.end_date_passed %}
                 <div class="share-div">
                     <a class="btn btn-facebook btn-social-share" href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank"><i class="fa fa-facebook"></i></a>
                     <a class="btn btn-google btn-social-share" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank"><i class="fa fa-google-plus"></i></a>
@@ -102,11 +102,15 @@
                                 </div>
                                 <div class="countdown-wrapper">
                                     <p class="crowdfund-stat">{% trans "Remaining Time" %}</p>
+                                    {% if crowdfund.end_date and not crowdfund.end_date_passed %}
                                     <div class="countdown" id="endcountdown">
                                         <h1 id="day"></h1>
                                         <h1 id="hour"></h1>
                                         <h1 id="minute"></h1>
                                     </div>
+                                    {% else %}
+                                    <p class="crowdfund-ended">{% trans "Drive Ended" %}</p>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -191,8 +195,8 @@
     <script type="text/javascript" src="{% static "dist/js/jquery.countdown.min.js" %}"></script>
     {% compress js %}
     <script type="text/javascript">
-        {% if crowdfund.end_date %}
-        var countdown_time = moment('{{ crowdfund.end_date|date:"Y/m/d" }}').format("YYYY/MM/DD HH:mm");
+        {% if crowdfund.end_date and not crowdfund.end_date_passed %}
+        var countdown_time = moment('{{ crowdfund.end_date|date:"Y/m/d" }}').format("YYYY/MM/DD") + " 23:59:59";
         $("#endcountdown").countdown(countdown_time, function(event) {
             $("#day").html(event.strftime('%D') + '<span>D</span>');
             $("#hour").html(event.strftime('%H') + '<span>H</span>');
