--- a/templates/crowdfunding/index.html
+++ b/templates/crowdfunding/index.html
@@ -163,11 +163,15 @@
                           </div>
                       </label>
                   </div>
-                  <div class="form-group" style="margin-bottom: 50px" id="div_id_message">
+                  <div class="form-group" id="div_id_message">
                       <label>
                           <span>{% trans "Note" %}</span>
                           <input class="form-control" type="text" name="message" id="id_message" value="{{ crowdfund.default_note }}">
                       </label>
+                  </div>
+                  <div class="stripe-logo">
+                      <a target="_blank" href="https://stripe.com/"><img src="{% static "dist/img/powered_by_stripe@3x.png" %}" alt="Powered By Stripe"></a>
+                      <img src="{% static "dist/img/logo-ssl.png" %}" alt="Secured by SSL">
                   </div>
                   <div class="boxcontent-submitbtn newbtn" id="submitbtn" style="border-radius: 0">
                       <p>{% trans "Submit" %}</p>
