--- a/templates/crowdfunding/public_index.html
+++ b/templates/crowdfunding/public_index.html
@@ -166,7 +166,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title">{% trans "Fund Now" %}</h4>
+            <h4 class="modal-title">{% trans "Contribute Now" %}</h4>
           </div>
           <div class="modal-body" id="paymentFormBody">
               <form action="{% url 'crowdfunding:accept_payment' %}" method="post" id="payment-form">
